--- a/SocialApp/SocialApp/Pages/LoginRegisterPage.xaml
+++ b/SocialApp/SocialApp/Pages/LoginRegisterPage.xaml
@@ -119,7 +119,7 @@
                     Padding="10,5" 
                     CornerRadius="5"
                     Margin="10,0,5,0"
-                    Click="UploadImage"/>
+                    Click="OnImageUpload"/>
 
                 <!-- Remove Image Button -->
                 <Button 
@@ -130,7 +130,7 @@
                     Padding="10,5" 
                     CornerRadius="5"
                     Margin="5,0,0,0"
-                    Click="RemoveImage"/>
+                    Click="OnImageRemoval"/>
             </StackPanel>
 
             <CheckBox 
